--- a/src/code/interface.css
+++ b/src/code/interface.css
@@ -1,15 +1,20 @@
 /********************************************
          INTERFACE IMPROVEMENTS
 ********************************************/
-/* Set scrollbar width to a thinner size */
-#main-container {
-    overflow: hidden;
-}
-/* Hides scrollbar in right panel */
-.scrollbar-spacing {
-    overflow-x: hidden;
+
+*::-webkit-scrollbar {
+  width: var(--ls-scrollbar-width);
+  height: var(--ls-scrollbar-width);
+  background-color: var(--ls-scrollbar-background-color);
 }
 
+*::-webkit-scrollbar-thumb {
+  background-color: var(--ls-scrollbar-foreground-color);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--ls-scrollbar-thumb-hover-color);
+}
 /* Hides the Favorite & Recent Titles */
 /*.left-sidebar-inner .nav-content-item .header {
     visibility: hidden;
